--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete History by Keyword</title>
+    <title>Delete Browser History by Keywords</title>
     <style>
         body {
             width: 300px;
@@ -35,8 +35,8 @@
 </head>
 
 <body>
-	<h2>Delete History by Keyword</h2>
-    <input type="text" id="keywordInput" placeholder="Enter keyword">
+	<h2>Delete Browser History by Keywords</h2>
+    <input type="text" id="keywordInput" placeholder="Enter keywords">
     <button id="searchButton">Search History</button>
     <ul id="historyList"></ul>
     <button id="deleteButton" disabled>Delete Selected History</button>
