--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
     <input type="text" id="keywordInput" placeholder="Enter keywords">
     <button id="searchButton">Search History</button>
     <ul id="historyList"></ul>
-    <button id="deleteButton" disabled>Delete Selected History</button>
+    <button id="deleteButton" disabled>Delete Matched History</button>
     <script src="popup.js"></script>
 </body>
 
