--- a/popup.html
+++ b/popup.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Browser History by Keywords</title>
+    <title id="pageTitle"></title>
     <style>
         body {
             width: 300px;
             padding: 10px;
+			margin: 0;
+			overflow: hidden !important ;
+			max-height:200px;
         }
 
         input {
-            width: 100%;
+            width: 98%;
             margin-bottom: 10px;
         }
 
         button {
             width: 100%;
             margin-bottom: 10px;
-			color:#ffffff;
-			background-color:#3399ff;
+            color:#ffffff;
+            background-color:#3399ff;
+            border: none;
+            padding: 5px;
+            border-radius: 3px;
+            cursor: pointer;
         }
+
+		button#deleteButton{
+			background-color:#c0c0c0;
+			color: #ffffff;
+		}
 
         ul {
             list-style-type: none;
             padding: 0;
+            max-height: 300px;
+            overflow-y: auto;
+		    margin: 0 0 10px 0;
         }
 
         li {
-            margin-bottom: 5px;
+            list-style-type: none;
+            padding: 5px;
+			margin: 0;
         }
+s        }
     </style>
 </head>
 
 <body>
-	<h3>Delete Browser History by Keywords</h3>
-    <input type="text" id="keywordInput" placeholder="Enter keywords">
-    <button id="searchButton">Search History</button>
+    <h3 id="extensionTitle"></h3>
+    <input type="text" id="keywordInput" placeholder="">
+    <button id="searchButton"></button>
+    <button id="deleteButton" disabled></button>
     <ul id="historyList"></ul>
-    <button id="deleteButton" disabled>Delete Matched History</button>
     <script src="popup.js"></script>
 </body>
 
